Closed Bug 384503 Opened 17 years ago Closed 17 years ago

Bookmarks service crashes destroying a PRLock

Categories

(Firefox :: Bookmarks & History, defect, P2)

defect

Tracking

()

RESOLVED FIXED
Firefox 3 alpha6

People

(Reporter: sayrer, Assigned: asaf)

References

()

Details

Attachments

(1 file)

Mano says this stack could happen if the service fails to initialize.
Assignee: nobody → mano
OS: Mac OS X → All
Priority: -- → P2
Hardware: PC → All
Target Milestone: --- → Firefox 3 alpha6
Attached patch patchSplinter Review
Attachment #268436 - Flags: review?(sayrer)
Attachment #268436 - Flags: review?(sayrer) → review+
mozilla/toolkit/components/places/src/nsNavBookmarks.cpp 1.103
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".

In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body   contains   places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.

Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.

Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: