Bug 384503 - Bookmarks service crashes destroying a PRLock. r=sayrer.